# Weblab-Haskell

./: .gitignore  Makefile.inc
haskell/: .gitignore  Dockerfile  Makefile
haskell/testresults/test_expectFailure/: results.xml
haskell/testresults/test_parse_error/: results.xml
haskell/testresults/test_quicksort_fail/: results.xml
haskell/testresults/test_quicksort_success/: results.xml
haskell/testresults/test_reverse/: results.xml
haskell/testrunner/: FormatResult.hs  TestRunner.cabal  main.hs
haskell/tests/test_expectFailure/: library.hs  solution.hs  test.hs
haskell/tests/test_first_steps/: solution.hs  test.hs
haskell/tests/test_parse_error/: solution.txt
haskell/tests/test_quicksort_fail/: library.hs  solution.hs  test.hs
haskell/tests/test_quicksort_success/: solution.hs  test.txt
haskell/tests/test_reverse/: solution.hs  test.hs
haskell/user_code/: truncate_output.sh
haskell/user_code/testrunner/: README.md  TestRunner.cabal  main.hs
