cabal-version:       3.0
name:                TestRunner
version:             0.1.0.0
synopsis:            Test runner for Haskell code on Weblab
license:             MIT
category:            executable

executable TestRunner
  main-is:        main.hs
  build-depends:  base        >= 4.14.0 && < 4.15,
                  process     >= 1.6    && < 1.7,
                  QuickCheck  >= 2.14   && < 3.0,
                  xml         >= 1.3    && < 1.4
  other-modules: FormatResult
  default-language:   Haskell2010
  default-extensions: MultiWayIf
                    , TupleSections
  ghc-options: -dynamic
